elminado .mongod del repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Conda environment:
 .envgeolocation
 
+# MongoDB:
+.mongodb
+
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
